# frankensearch

./: .gitignore  AGENTS.md  Cargo.toml  README.md  UPGRADE_LOG.md  install.sh
.beads/: issues.jsonl
.github/workflows/: ci.yml
.rch/: config.toml
crates/: fastembed_embedder.rs  lib.rs
crates/frankensearch-core/: Cargo.toml
crates/frankensearch-durability/: Cargo.toml
crates/frankensearch-embed/: Cargo.toml
crates/frankensearch-embed/benches/: hash_embed.rs
crates/frankensearch-embed/src/: api_embedder.rs  auto_detect.rs  batch_coalescer.rs  cached_embedder.rs  fastembed_embedder.rs  hash_embedder.rs  lib.rs  model2vec_embedder.rs  model_cache.rs  model_download.rs  model_manifest.rs  model_registry.rs
crates/frankensearch-embed/tests/: offline_fallback_tests.rs
crates/frankensearch-fsfs/: Cargo.toml
crates/frankensearch-fsfs/src/: alien_recommendations.rs  asupersync_cx.rs  bead_self_doc.rs  catalog.rs  cli_e2e.rs  concurrency.rs  config.rs  control_plane.rs  control_plane_error.rs  crate_registry.rs  determinism.rs  evidence.rs  expected_loss.rs  explanation_payload.rs  file_classification.rs  high_cost_artifact.rs  incremental_change.rs  interaction_matrix.rs  interaction_primitives.rs  lexical_pipeline.rs  lib.rs  lifecycle.rs  main.rs  mount_info.rs  orchestration.rs  output_schema.rs  packaging.rs  pressure.rs  pressure_profile_contract.rs  privacy.rs  profiling.rs  progressive_quality_gate.rs  provenance.rs  query_execution.rs  query_expansion.rs  query_latency_optimization.rs  query_planning.rs  ranking_priors.rs  redaction.rs  repro.rs  (+9 more)
crates/frankensearch-fsfs/src/adapters/: cli.rs  format_emitter.rs  tui.rs
crates/frankensearch-fsfs/tests/: agent_contract_regression.rs  benchmark_baseline_matrix.rs  cli_command_tests.rs  cli_e2e_contract.rs  deluxe_tui_e2e.rs  explanation_payload_contract.rs  filesystem_chaos.rs  pressure_simulation_harness.rs  privacy_redaction_suite.rs  profiling_harness_workflow.rs  schema_conformance.rs  search_quality_harness.rs
crates/frankensearch-fsfs/tests/golden/: composition_matrix_gate_summary_roundtrip_v1.golden.json  control_plane_stream_frame_error_roundtrip_v1.golden.json  control_plane_stream_frame_sampling_roundtrip_v1.golden.json  crate_placement_registry_roundtrip_v1.golden.json  explanation_payload_envelope_v1.golden.json  explanation_payload_tui_and_toon_v1.golden.json  fsfs_determinism_check_result_roundtrip_v1.golden.json  fsfs_file_classification_contract_roundtrip_v1.golden.json  fsfs_model_cache_diagnostics_missing_offline_roundtrip_v1.golden.json  fsfs_model_cache_diagnostics_warm_roundtrip_v1.golden.json  fsfs_query_plan_metamorphic_failure_roundtrip_v1.golden.json  fsfs_snippet_highlight_provenance_decision_roundtrip_v1.golden.json  interaction_failure_summary_roundtrip_v1.golden.json  interaction_gate_policy_roundtrip_v1.golden.json  interaction_lane_ownership_roundtrip_v1.golden.json  slo_contract_definition_roundtrip_v1.golden.json  telemetry_transport_contract_roundtrip_v1.golden.json  telemetry_transport_frame_backpressure_roundtrip_v1.golden.json  telemetry_transport_frame_error_roundtrip_v1.golden.json  telemetry_transport_frame_event_roundtrip_v1.golden.json
crates/frankensearch-fusion/: Cargo.toml
crates/frankensearch-fusion/benches/: graph_rank.rs  mmr_rerank.rs  rrf_fuse.rs  sync_int8_fetch.rs
crates/frankensearch-fusion/src/: adaptive.rs  blend.rs  cache.rs  circuit_breaker.rs  conformal.rs  federated.rs  feedback.rs  graph_rank.rs  incremental.rs  interaction_lanes.rs  interaction_oracles.rs  lib.rs  mmr.rs  ope.rs  phase_gate.rs  prf.rs  queue.rs  refresh.rs  repro_rrf.rs  rrf.rs  searcher.rs  sync_searcher.rs
crates/frankensearch-fusion/tests/: interaction_integration.rs  interaction_unit.rs
crates/frankensearch-index/: Cargo.toml
crates/frankensearch-lexical/: Cargo.toml
crates/frankensearch-lexical/src/: cass_compat.rs  lib.rs
crates/frankensearch-ops/: Cargo.toml
crates/frankensearch-rerank/: Cargo.toml
crates/frankensearch-rerank/src/: lib.rs  native.rs  pipeline.rs  test_inputs.rs
crates/frankensearch-storage/: Cargo.toml
crates/frankensearch-tui/: Cargo.toml
docs/: NEGATIVE_EVIDENCE.md  PERF_LEDGER.md  cross-epic-telemetry-adapter-lockstep-contract.md  e2e-artifact-contract.md  fsfs-alien-recommendation-contracts.md  fsfs-dual-mode-contract.md  fsfs-model-cache-diagnostics.md  fsfs-packaging-release-install-contract.md  fsfs-query-plan-metamorphic-contract.md  ops-tui-ia.md  per-feature-smoke-lanes.md
docs/architecture/: overview.md
frankensearch/: Cargo.toml
frankensearch/benches/: search_bench.rs
frankensearch/examples/: basic_search.rs  bench_quick.rs  streaming_search.rs  validate_full_pipeline.rs  validate_fusion.rs
frankensearch/src/: index_builder.rs  lib.rs
frankensearch/tests/: cross_component.rs  integration.rs
schemas/: fsfs-model-cache-diagnostics-v1.schema.json  fsfs-query-plan-metamorphic-v1.schema.json
schemas/fixtures/: control-plane-stream-control-topology-change-v1.json  control-plane-stream-heartbeat-v1.json  fsfs-model-cache-diagnostics-cold-v1.json  fsfs-model-cache-diagnostics-contract-v1.json  fsfs-query-plan-metamorphic-contract-v1.json  fsfs-query-plan-metamorphic-report-v1.json  telemetry-transport-frame-control-reconnect-v1.json  telemetry-transport-frame-heartbeat-v1.json
schemas/fixtures-invalid/: control-plane-stream-heartbeat-missing-unacked-v1.json  fsfs-model-cache-diagnostics-invalid-missing-advice-v1.json  fsfs-model-cache-diagnostics-invalid-raw-path-v1.json  fsfs-query-plan-metamorphic-invalid-missing-replay-v1.json  fsfs-query-plan-metamorphic-invalid-unreported-failure-v1.json  telemetry-transport-frame-heartbeat-missing-seq-v1.json
scripts/: check_bead_test_matrix.sh  check_feature_matrix.sh  check_fsfs_index_freshness_audit.sh  check_fsfs_model_cache_diagnostics.sh  check_fsfs_query_plan_metamorphic.sh  check_progressive_release_quality_gate.sh  install.sh  rch-ensure-deps.sh
scripts/e2e/: telemetry_adapter_agent_mail.sh  telemetry_adapter_cass.sh  telemetry_adapter_common.sh  (+1 more)
(+104 files in other folders)
