[package]
name = "frankensearch-fsfs"
version = "0.1.0"
description = "Scaffold crate for frankensearch-fast-search (fsfs) binary surfaces"
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "fsfs"
path = "src/main.rs"

[dependencies]
frankensearch-core = { workspace = true }
frankensearch-tui = { workspace = true }
asupersync = { workspace = true }
fsqlite = { path = "/dp/frankensqlite/crates/fsqlite" }
fsqlite-types = { path = "/dp/frankensqlite/crates/fsqlite-types" }
serde = { workspace = true }
serde_json = { workspace = true }
toon-rust = { workspace = true }
tracing = { workspace = true }
dirs = { workspace = true }
toml = { workspace = true }
signal-hook = "0.3"
sysinfo = { workspace = true }
notify = "7.0"

[dev-dependencies]
asupersync = { workspace = true }
tempfile = "3"
proptest = { workspace = true }

[lints]
workspace = true
