[package]
name = "frankensearch-lexical"
version = "0.1.0"
description = "Tantivy BM25 full-text search integration for frankensearch"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
frankensearch-core = { workspace = true }
tantivy = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
asupersync = { workspace = true }

[lints]
workspace = true
